Refactor: Update generics and address deprecated API usage
This commit addresses several instances of missing Java generics and deprecated API calls to reduce warnings and improve compatibility with modern Java versions.

Key changes include:
- Parameterized JComboBox instantiations and declarations.
- Replaced Class.newInstance() with getDeclaredConstructor().newInstance() and updated exception handling.
- Addressed unchecked casts through type parameterization or @SuppressWarnings where contextually safe (e.g., for LookAndFeel, generic type T).
- Updated calls to other deprecated methods:
  - XStream.addImmutableType()
  - URL constructors for file paths
  - Runtime.exec(String)
  - InputEvent.getModifiers()
  - Applet.getURL() (by fixing the source method)
- Corrected an assignment from Class.getClass() to a parameterized Class variable using a type cast.
- Applied diamond operator for an ArrayList instantiation.
- Ensured compilation errors introduced during these changes were fixed.

Remaining known deprecation warnings (e.g., for JApplet usage or for classes intentionally deprecated for backward compatibility like ClassRelationshipEdge) are out of the scope of this refactoring pass.