@@ -43,7 +43,7 @@ public class BrowserLauncher
                     url
                 });
             }
-            else if (osName.startsWith("Windows")) Runtime.getRuntime().exec("rundll32 url.dll,FileProtocolHandler " + url);
+            else if (osName.startsWith("Windows")) Runtime.getRuntime().exec(new String[] {"rundll32", "url.dll,FileProtocolHandler", url});
             else
             { // assume Unix or Linux
                 String[] browsers =
